@@ -1,3 +1,4 @@
+    ADDED: changing the coloumns by right clicking on the panel's header
     ADDED: color scheme export/import. no support in gui yet
     ADDED: an other .desktop-file with the red icon that starts krusader as root
     ADDED: useraction: now every placeholder can cancel the execution. (-> %_ask(..)%)
